[package]
name = "crates"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros", "ws"] }
base64 = { version = "0.22.1", features = ["alloc"] }
bytemuck = "1.24.0"
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.31"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
solana-account-decoder = "3.0.10"
solana-client = "3.0.10"
solana-pubsub-client = "3.0.10"
solana-sdk = "3.0.0"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-postgres = "0.7.15"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
url = "2.5.7"

